# QMLShaderExamples

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.qml
cmake/: FetchDependencies.cmake  QMLPluginDependencies.cmake
components/: BlurImage.qml  GenieEffect.qml  ItemBlur.qml  RoundImage.qml  RoundItem.qml  SliderChannel.qml
pages/: BlurPage.qml  ColorChannelPage.qml  GenieEffectPage.qml  RoundImagePage.qml  WaveEffectPage.qml
shaders/: blurImage.frag  blurImage.vert  colorChannel.frag  colorChannel.vert  fastblur.frag  genieEffect.vert  roundImage.frag  waveEffect.frag
